update maven.yml upload jar file